objects/Bench_Employment__e.object
<CustomObject>
    <fields>
        <fullName>EventId__c</fullName>
        <label>Event Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventName__c</fullName>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_JSON__c</fullName>
        <label>Record JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <label>SystemModstamp</label>
        <type>DateTime</type>
    </fields>
    <label>Bench Employment</label>
    <pluralLabel>Bench Employments</pluralLabel>
</CustomObject>